[package]
name = "press_test"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2",  features = ["defmt"], default-features = false  }
embassy-executor = { version = "0.9.0",  features = ["arch-cortex-m", "executor-thread", "defmt"]  }
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]  }
embassy-usb = { version = "0.5.1",  features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
usbd-hid = {version="0.8.1" }
defmt = { version = "1.0.1", default-features = false }
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]  }
cortex-m-rt = {version="0.7.0" }
embedded-hal = {version="1.0.0" }
embedded-can = { version = "0.4"  }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.1", default-features = false }
static_cell = {version="2.0.0", default-features = false} 
once_cell = { version = "1.18.0", default-features = false }




[profile.release]
debug = 0